@@ -28,7 +28,7 @@
 	     (:file "data-access")
 	     (:file "cmt-io")
 	     (:file "foreign-column")
-	     (:file "interpolated-column")
+	     #+skip(:file "interpolated-column")
 	     (:file "column-fitting")
 	     (:file "linear-least-squares-fit-column")
 	     (:file "non-lin-least-sq-fit-column"))
